# gSDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReleaseNotes.txt  gSDK  gimbal_interface.cpp  gimbal_interface.h  makefile  mavlink_control.cpp  mavlink_control.h  serial_port.cpp  serial_port.h
cmake/: gsdk-config.cmake.in
doc/: gSDK Documentation_v3.0.0.docx  gSDK Documentation_v3.0.0_draft.docx  ~$DK Documentation_v3.0.0.docx  ~$DK Documentation_v3.0.0_draft.docx
examples/: CMakeLists.txt
examples/save_param_to_file/: CMakeLists.txt  save_param_to_file.cpp  save_param_to_file.h
examples/upgrade_gimbal/: CMakeLists.txt  upgrade_gimbal.cpp  upgrade_gimbal.h
fw/: gremsyPixyLR_v787_Official.hex  nightingale_x_gremsy_pro3_v787_Official.hex
sample/platform/linux/: CMakeLists.txt  mavlink_control.cpp  mavlink_control.h
src/: CMakeLists.txt  bootloader.cpp  bootloader.h  generic_port.h  gimbal_interface.cpp  gimbal_interface.h  gimbal_protocol.cpp  gimbal_protocol.h  gimbal_protocol_v1.cpp  gimbal_protocol_v1.h  gimbal_protocol_v2.cpp  gimbal_protocol_v2.h  serial_port.cpp  serial_port.h  udp_port.cpp  udp_port.h
src/gimbal_interface/: gimbal_interface.cpp  gimbal_interface.h  gimbal_protocol.cpp  gimbal_protocol.h  gimbal_protocol_v1.cpp  gimbal_protocol_v1.h  gimbal_protocol_v2.cpp  gimbal_protocol_v2.h  gsdk_types.h
src/hal/: gsdk_platform_manager.cpp  gsdk_platform_manager.h  gsdk_serial_manager.cpp  gsdk_serial_manager.h  gsdk_thread_manager.cpp  gsdk_thread_manager.h
src/mavlink/include/mavlink/v2.0/: mavlink_conversions.h
src/mavlink/include/mavlink/v2.0/common/: mavlink_msg_param_value.h
src/parsers/: utils.cpp  utils.h
src/platform/linux/: linux_serial_port.cpp  linux_serial_port.h  posix_thread_manager.cpp  posix_thread_manager.h
